<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="open_representative_website">Open representative website</string>
    <string name="open_representative_facebook">Open representative Facebook</string>
    <string name="open_representative_twitter">Open representative Twitter</string>
    <string name="ballot_logo">Ballot logo</string>
    <string name="upcoming_elections">Upcoming elections</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="follow_election">Follow Election</string>
    <string name="un_follow_election">Unfollow Election</string>
    <string name="election_information">Election Information</string>
    <string name="address">Correspondence address:</string>
    <string name="voting_locations"><u>Voting Locations</u></string>
    <string name="unavailable_browser_error">Unable to open URL. Please install a web browser</string>
    <string name="ballot_information"><u>Ballot Information</u></string>
    <string name="use_my_location">Use my Location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="location_required">Location permission required</string>
    <string name="location_on_required">Location must be turned on in order to infer address</string>
    <string name="missing_address_fields_error">Please fill out the missing address fields</string>
    <string name="unable_to_acquire_location_error">Unable to acquire last known location. Please try again in a moment</string>
    <string name="no_representatives_found_error">No representatives found</string>
    <string name="follow_some_elections_to_see_them_here">Follow some elections to see them here!</string>

</resources>
