<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="address"
            type="com.example.android.politicalpreparedness.network.models.Address" />

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layoutDescription="@xml/representatives_motion_scene">

        <TextView
            android:id="@+id/search_title"
            style="@style/FragmentHeaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/representative_search" />

        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            android:hint="@string/address_line_1"
            android:text="@{address.line1}"
            tools:text="Amphitheatre Parkway" />

        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            android:hint="@string/address_line_2"
            android:text="@{address.line2}"
            tools:text="1600" />

        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            android:hint="@string/city"
            android:text="@{address.city}" />

        <Spinner
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            android:entries="@array/states"
            app:stateValue="@{address.state}"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/city"
            app:layout_constraintBottom_toBottomOf="@id/city"/>

        <EditText
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="number"
            android:maxLength="5"
            android:hint="@string/zip"
            android:text="@{address.zip}" />

        <Button
            android:id="@+id/button_search"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_my_representatives" />

        <Button
            android:id="@+id/button_location"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_my_location" />

        <TextView
            android:id="@+id/representative_title"
            style="@style/FragmentHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_representatives" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representatives_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ProgressBar
            android:id="@+id/representatives_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            motion:visibilityMode="ignore"
            app:loadingStatus="@{viewModel.loadingRepresentatives}" />

        <TextView
            android:id="@+id/list_placeholder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:textAlignment="center"
            android:visibility="gone"
            motion:visibilityMode="ignore"
            android:text="@string/no_representatives_found_error" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>